plugins {
    id 'java'
    id 'application'
    //id 'org.jetbrains.kotlin.jvm' version '1.6.10'
    id 'io.github.0ffz.github-packages' version '1.2.1'
}

sourceCompatibility = "17"
targetCompatibility = "17"

//compileKotlin {
//	kotlinOptions {
//		jvmTarget = '17'
//	}
//}
//compileTestKotlin {
//	kotlinOptions {
//		jvmTarget = '17'
//	}
//}

mainClassName = 'com.rs.Launcher'

repositories {
	mavenLocal()
	mavenCentral()
	maven githubPackage.invoke('DarkanRS/core')
}

group 'rs.darkan'
version '1.0.11'

dependencies {
	//implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
	implementation group: 'rs.darkan', name: 'core', version: '1.0.11'
	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
	implementation group: 'com.google.guava', name: 'guava', version: '31.0.1-jre'
	implementation group: 'org.mongodb', name: 'mongodb-driver-sync', version: '4.4.0'
	implementation group: 'org.mongodb', name: 'mongodb-driver-core', version: '4.4.0'
	implementation group: 'io.netty', name: 'netty-all', version: '4.1.72.Final'
	implementation group: 'io.undertow', name: 'undertow-core', version: '2.2.8.Final'
	implementation group: 'it.unimi.dsi', name: 'fastutil', version: '8.5.8'
	implementation group: 'com.trivago', name: 'fastutil-concurrent-wrapper', version: '0.1.0'
    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
}
